# quix-streams

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.legacy.md  README.md  WATERMARKING_ANALYSIS.md  arch-notes.md  benchmark.py  compose.local.yaml  mac-m1-m2-install.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-mypy.txt  requirements.txt  roadmap.md  setup.cfg  test.py  what-is-timeseries.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md
LICENSES/: LICENSE.httpx  LICENSE.jsonlines  LICENSE.pyiceberg  LICENSE.redis-py  LICENSE.rich
conda/: README.md  meta.yaml  post-link.sh  release.sh  requirements.py  test.sh
docs/: aggregations.md  app-management.md  application.md  architecture-state-ttl-legacy-backfill.md  branching.md  checkpointing.md  concatenating.md  configuration.md  connect.md  consuming-multiple-topics.md  debugging.md  docker-setup.md  example.md  groupby.md  introduction.md  joins.md  kafka.md  merging.md  missing-data.md  process.md  processing.md  producer.md  publish.md  python-setup.md  quickstart.md  quix-platform.md  read.md  rocksdb-lock-contention-analysis.md  serialization.md  state-management.md  stateful-processing.md  streamingdataframe.md  subscribe.md  upgrading-legacy.md  using.md  versionmigration.md  windowing.md  write.md
examples/: README.md  requirements.txt
quixstreams/: RELEASE.md  __init__.py  app.py  checkpoint.py  context.py  error_callbacks.py  internal_producer.py  logging.py  processing_context.py  rowconsumer.py  rowproducer.py  runtracker.py  topic_manager.py  types.py
scripts/: recovery_diagnostics_demo.py  recovery_diagnostics_docker_compose.yml  run_recovery_diagnostics_demo.sh
src/: .gitignore
src/StreamingDataFrames/: .gitignore  LICENSE.rocksdict  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg
src/StreamingDataFrames/docs/: quix-platform.md  serialization.md  stateful-processing.md  streamingdataframe.md  upgrading-legacy.md
src/StreamingDataFrames/documentation/: stateful_processing.md  upgrading_legacy.md
src/StreamingDataFrames/examples/: .gitignore  README.md  env_vars.env
src/StreamingDataFrames/examples/applications/: json_application.py
src/StreamingDataFrames/examples/bank_example/: README.md
src/StreamingDataFrames/examples/bank_example/json_version/: consumer.py  producer.py
src/StreamingDataFrames/examples/bank_example/quix_platform_version/: alternate_producer.py  consumer.py  producer.py
src/StreamingDataFrames/quixstreams/: __init__.py  app.py  context.py
src/StreamingDataFrames/quixstreams/core/stream/: stream.py
src/StreamingDataFrames/quixstreams/dataframe/: __init__.py  base.py  column.py  dataframe.py  dataframe_v2.py  exceptions.py  pipeline.py  series.py
src/StreamingDataFrames/quixstreams/kafka/: __init__.py  producer.py
src/StreamingDataFrames/quixstreams/models/: __init__.py  context.py  rows.py  topics.py  types.py
src/StreamingDataFrames/quixstreams/models/serializers/: __init__.py  exceptions.py  quix.py
src/StreamingDataFrames/quixstreams/state/: exceptions.py  manager.py  types.py
src/StreamingDataFrames/quixstreams/state/rocksdb/: exceptions.py  partition.py  serialization.py  store.py
src/StreamingDataFrames/streamingdataframes/: __init__.py  app.py  error_callbacks.py  logging.py  rowconsumer.py  rowproducer.py  runner.py  types.py
src/StreamingDataFrames/streamingdataframes/dataframe/: column.py  dataframe.py  exceptions.py  pipeline.py
src/StreamingDataFrames/streamingdataframes/exceptions/: __init__.py  assignment.py
src/StreamingDataFrames/streamingdataframes/kafka/: consumer.py  producer.py
src/StreamingDataFrames/streamingdataframes/models/: messages.py  rows.py  timestamps.py  topics.py  types.py
src/StreamingDataFrames/streamingdataframes/models/serializers/: __init__.py  base.py  exceptions.py  json.py  quix.py
src/StreamingDataFrames/streamingdataframes/state/: exceptions.py  manager.py  types.py
src/StreamingDataFrames/streamingdataframes/state/rocksdb/: __init__.py  exceptions.py  options.py  partition.py  serialization.py  store.py  stores.py  types.py
src/StreamingDataFrames/tests/: conftest.py  logging.py  utils.py
src/StreamingDataFrames/tests/test_dataframes/: fixtures.py  test_app.py  test_logging.py  test_rowconsumer.py  test_rowproducer.py  test_runner.py
src/StreamingDataFrames/tests/test_dataframes/test_dataframe/: fixtures.py  test_column.py  test_dataframe.py  test_pipeline.py
src/StreamingDataFrames/tests/test_dataframes/test_kafka/: test_consumer.py  test_producer.py
src/StreamingDataFrames/tests/test_dataframes/test_models/: fixtures.py  test_quix_serializers.py  test_rows.py  test_serializers.py  test_timestamps.py  test_topics.py  test_types.py  utils.py
src/StreamingDataFrames/tests/test_dataframes/test_platforms/test_quix/: fixtures.py  test_api.py  test_config.py  test_quix_runner.py
src/StreamingDataFrames/tests/test_dataframes/test_state/: fixtures.py  test_manager.py
src/StreamingDataFrames/tests/test_dataframes/test_state/test_rocksdb/: fixtures.py  test_partition.py  test_store.py  test_stores.py
src/StreamingDataFrames/tests/test_quixstreams/: test_app.py  test_context.py  test_logging.py
src/StreamingDataFrames/tests/test_quixstreams/test_dataframe/: fixtures.py  test_column.py  test_dataframe.py  test_dataframe_v2.py  test_pipeline.py  test_series.py
src/StreamingDataFrames/tests/test_quixstreams/test_kafka/: test_consumer.py
src/StreamingDataFrames/tests/test_quixstreams/test_models/: test_rows.py  test_serializers.py  test_topics.py
src/StreamingDataFrames/tests/test_quixstreams/test_platforms/test_quix/: fixtures.py  test_api.py
src/StreamingDataFrames/tests/test_quixstreams/test_state/: test_manager.py
src/StreamingDataFrames/tests/test_quixstreams/test_state/test_rocksdb/: test_partition.py
tests/: conftest.py  containerhelper.py  logging.py  requirements.txt  utils.py
(+2895 files in other folders)
