[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "quixstreams"
dynamic = ["version", "dependencies"]
description = "Python library for building stream processing applications with Apache Kafka"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9, <4"
keywords = ["streaming", "processing", "pipeline", "event", "real-time", "time series", "DataFrame", "Kafka", "Quix"]
authors = [
    { name = "Quix Analytics Ltd", email = "devs@quix.io" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/quixio/quix-streams"

[project.optional-dependencies]
all = [
    "fastavro>=1.8,<2.0",
    "protobuf>=5.27.2,<7.0",
    "influxdb3-python[pandas]>=0.7,<1.0",
    "pyiceberg[pyarrow,glue]>=0.7",
    "google-cloud-bigquery>=3.26.0,<3.36",
    "google-cloud-pubsub>=2.23.1,<3",
    "psycopg2-binary>=2.9.9,<3",
    "types-psycopg2>=2.9,<3",
    "boto3>=1.35.65,<2.0",
    "boto3-stubs>=1.35.65,<2.0",
    "redis[hiredis]>=5.2.0,<6",
    "azure-storage-blob>=12.24.0,<12.25",
    "neo4j>=5.27.0,<6",
    "pymongo>=4.11,<5",
    "pandas>=1.0.0,<3.0",
    "elasticsearch>=8.17,<9",
    "influxdb>=5.3,<6",
    "python-dateutil>=2.8.2,<3"
]

avro = ["fastavro>=1.8,<2.0"]
protobuf = ["protobuf>=5.27.2,<7.0"]
influxdb1 = ["influxdb>=5.3,<6"]
influxdb3 = ["influxdb3-python[pandas]>=0.7,<1.0"]
iceberg = ["pyiceberg[pyarrow]>=0.7"]
iceberg_aws = ["pyiceberg[pyarrow,glue]>=0.7"]
bigquery = ["google-cloud-bigquery>=3.26.0,<3.36"]
pubsub = ["google-cloud-pubsub>=2.23.1,<3"]
postgresql = ["psycopg2-binary>=2.9.9,<3", "types-psycopg2>=2.9,<3"]
aws = ["boto3>=1.35.65,<2.0", "boto3-stubs>=1.35.65,<2.0"]
azure = ["azure-storage-blob>=12.24.0,<12.25"]
neo4j = ["neo4j>=5.27.0,<6"]
mongodb = ["pymongo>=4.11,<5"]
pandas = ["pandas>=1.0.0,<3.0"]
elasticsearch = ["elasticsearch>=8.17,<9"]
tdengine = ["python-dateutil>=2.8.2,<3"]

# AWS dependencies are separated by service to support
# different requirements in the future.
kinesis = ["quixstreams[aws]"]
s3 = ["quixstreams[aws]"]
redis = ["redis[hiredis]>=5.2.0,<6"]
azure-file = ["quixstreams[azure]"]

[tool.setuptools.packages.find]
include = ["quixstreams*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "quixstreams.__version__"}

# This enables the pydantic pycharm plugin to suggest field names correctly
[tool.pydantic-pycharm-plugin]
ignore-init-method-arguments = true

[tool.ruff]
fix = true
lint.select = [
  "F",  # Pyflakes
  "I",  # isort
  "S",  # flake8-bandit
  "SLF",  # flake8-self
]
exclude = [
  "*_pb2.py",  # Protobuf files
]

[tool.ruff.lint.per-file-ignores]
# S101 Use of `assert` detected
# S105 Possible hardcoded password assigned to variable
# S106 Possible hardcoded password assigned to argument
# S311 Standard pseudo-random generators are not suitable for cryptographic purposes
# SLF001 Private member accessed
"docs/*.py" = ["S311"]
"examples/*.py" = ["S311"]
"tests/*.py" = ["S101", "S105", "S106", "S311", "SLF001"]

[tool.pytest.ini_options]
minversion = "6.0"
filterwarnings = [
  "ignore::Warning:confluent_kafka.schema_registry.*",
]
# Ignore manual tests by and some loggers by default
addopts = "--log-disable=urllib3.connectionpool --log-disable=parso --log-disable=docker --log-disable=asyncio"
# Print debug logs to the console in tests
log_cli = true
log_cli_level = "INFO"
log_cli_format = "[%(levelname)s] %(name)s: %(message)s"
# Custom markers
markers = ["timeit"]

[[tool.mypy.overrides]]
module = [
  "confluent_kafka.*",
  "pyarrow.*",
  "jsonpath_ng.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "quixstreams.sinks.community.*",
  "quixstreams.sources.community.*",
  "quixstreams.models.serializers.quix.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "quixstreams.rowproducer.*"
]
ignore_errors = true
