[metadata]
name = quixstreams
version = attr: quixstreams.__version__
url = https://github.com/quixio/quix-streams
author = Quix Analytics Ltd
author_email = devs@quix.io
description = Python library for building stream processing applications with Apache Kafka
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers

    License :: OSI Approved :: Apache Software License

    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8, <4
install_requires = file: requirements.txt
packages = find:

[options.packages.find]
exclude =
    tests*
    docs*
    examples*
